tests/failed/02-unsupported-derive.stderr
error: unsupported derive. It only supports `Clone`, `Copy`, `PartialEq`, `Eq`, `PartialOrd`, `Ord`, `Hash`, `Default`, `Debug`.
 --> tests/failed/02-unsupported-derive.rs:4:10
  |
4 | #[derive(Shit)]
  |          ^^^^
