tests/failed/02-unsupported-derive.rs
use structified_enum::structify;

#[structify]
#[derive(Shit)]
enum Foo {}

fn main() {}
